Add datetime completed_at to activities.

--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -23,6 +23,8 @@
   <%= f.label :activity_type %>:
   <%= f.text_field :activity_type %><br />
 
+  <%= f.date_select :completed_at %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
