Include blank completed_at data by default
Most activities are added before they're completed so it makes no sense
to have the form default to today's date.

--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -23,7 +23,7 @@
   <%= f.label :activity_type %>:
   <%= f.text_field :activity_type %><br />
 
-  <%= f.date_select :completed_at %>
+  <%= f.date_select :completed_at, { include_blank: true } %>
 
   <div class="actions">
     <%= f.submit %>
