--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -7,5 +7,9 @@
 <p>Location: <%= @activity.location %></p>
 <p>Type: <%= @activity.activity_type %></p>
 
+<% if completed_at %>
+<p><strong>This activity was completed on <%= completed_at.to_date.to_s(:long) %>.</strong></p>
+<% end %>
+
 <%= link_to 'Edit', edit_activity_path(@activity) %> |
 <%= link_to 'Back', activities_path %>
