--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,6 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Activities</h1>
+<% if !@page_title %>
+  <h1>Listing Activities</h1>
+<% else %>
+  <h1><%= @page_title %></h1>
+<% end %>
+
+<br>
+<%= link_to 'See completed activities', completed_activities_path %>
 
 <table>
   <thead>
