Fix bug on the show page
Another place where I forgot to call the method on the damn @activity
variable!

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -8,7 +8,7 @@
 <p>Type: <%= @activity.activity_type %></p>
 
 <% if @activity.completed_at %>
-<p><strong>This activity was completed on <%= completed_at.to_date.to_s(:long) %>.</strong></p>
+<p><strong>This activity was completed on <%= @activity.completed_at.to_date.to_s(:long) %>.</strong></p>
 <% end %>
 
 <%= link_to 'Edit', edit_activity_path(@activity) %> |
